devel
-----

* Internal Refactoring of K_PATH feature, with the goal to have all GraphAlgorithms on
  the same framework. This change should not have any visible effect on users.

* Fixed an endless busy loop which could happen if a coordinator tries to 
  roll back a database creation, but the database has already been dropped 
  by other means.

* Removed server-side JavaScript object `ArangoClusterComm`, so it cannot be
  used from inside JavaScript operations or Foxx.
  The `ArangoClusterComm` object was previously used inside a few internal 
  JavaScript operations, but was not part of the public APIs.

* Restrict access to functions inside JavaScript objects `ArangoAgency` and
  `ArangoAgent` to JavaScript code that is running in privileged mode, i.e.
  via the server's emergency console, the `/_admin/execute` API (if turned on)
  or internal bootstrap scripts.

* Added startup option `--javascript.transactions` to allow turning off JavaScript
  transactions if not needed. The default value for this option is `true`, meaning
  JavaScript transactions are available as before.
  However, using this option they can be turned off by admins to limit the amount
  of JavaScript user code that is executed.

* Introduce a default memory limit for AQL queries, to prevent rogue queries from
  consuming the entire memory available to an arangod instance.

  The limit is introduced via changing the default value of the option `--query.memory-limit` 
  from previously `0` (meaning: no limit) to a dynamically calculated value.
  The per-query memory limits defaults are now:

    Available memory:    134217728    (128MiB)  Limit:            0      (0MiB), %mem:  0.0
    Available memory:    268435456    (256MiB)  Limit:            0      (0MiB), %mem:  0.0
    Available memory:    536870912    (512MiB)  Limit:    201326592    (192MiB), %mem: 37.5
    Available memory:    805306368    (768MiB)  Limit:    402653184    (384MiB), %mem: 50.0